# STAPpp-zbw

./: README.md
data/: accurate.json  extract_convergence.py  gen_convergence.py  run-patch.py
data/8H/: 8h_patch_post.vtk  patch.out
data/beam/: beam_patch_post.vtk  patch.out
data/mixed/: mixed.out  mixed_post.vtk
data/test-8h/: 8h_convergence_1.out  8h_convergence_1_post.vtk  8h_convergence_2.out  8h_convergence_2_post.vtk  8h_convergence_4.out  8h_convergence_4_post.vtk  8h_convergence_8.out  8h_convergence_8_post.vtk  test_8h.inp  test_8h.out  test_8h_post.vtk
data/test-bar/: bar_convergence_1.out  bar_convergence_16.out  bar_convergence_16_post.vtk  bar_convergence_1_post.vtk  bar_convergence_2.out  bar_convergence_2_post.vtk  bar_convergence_4.out  bar_convergence_4_post.vtk  bar_convergence_8.out  bar_convergence_8_post.vtk  bar_patch.out  bar_patch_post.vtk  test_bar.inp
doc/: report.lyx  report.lyx~
make/: CMakeCache.txt
src/: CMakeLists.txt
src/cpp/: Domain.cpp  Element.cpp  ElementGroup.cpp  Material.cpp  Node.cpp  Outputter.cpp  PostOutputter.cpp  Solver.cpp  main.cpp
src/cpp/Elements/: 8H.cpp  Bar.cpp  Beam.cpp
src/h/: Domain.h  Element.h  ElementGroup.h  Material.h  Outputter.h  PostOutputter.h  Solver.h
src/h/Elements/: 8H.h  Bar.h  Beam.h
src/preprocessing/: ABAQUS.py  ABAQUSCalc.py  ABAQUSparser.py  STAPpp.py
